--- a/ProjectUAS_EzBooking_Client/src/MainForm/FormDashboard.form
+++ b/ProjectUAS_EzBooking_Client/src/MainForm/FormDashboard.form
@@ -251,7 +251,7 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Alvin Fernando\Downloads\Logo EZ Reservation.png"/>
+              <Image iconType="2" name="E:\Kuliah\Semester 4\Distributed Programming (DisProg)\project-uas-distprog\Logo EZ Reservation.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel3"/>
           </Properties>
